# imt-lab

./: .env.example  .gitignore  README.md  config.yaml  install.ps1  install.sh  pyproject.toml
data/: ai_adoption_eu.csv  cloud_adoption_eu.csv  digital_skills_eu.csv  ecommerce_eu.csv  gdp_eu.csv  ict_employment_eu.csv  rd_spending_eu.csv
scripts/: fetch_data.py
src/: agent.py  config.py  nodes.py  pdf.py  prompts.py  state.py  tools.py
web/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/app/: globals.css  layout.tsx
web/src/app/api/agent/: route.ts
web/src/app/api/chart/[filename]/: route.ts
web/src/app/api/report/[filename]/: route.ts
web/src/components/: ArtifactPanel.tsx  ChartsGallery.tsx  ChatApp.tsx  Logos.tsx  MessageView.tsx  NodeBadge.tsx  ReasoningPanel.tsx  ReportCard.tsx  ToolCallCard.tsx
web/src/lib/: agui.ts  types.ts
